[package]
name = "codecrafters-grep"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
map-macro = "0.3.0"
test-log = "0.2.16"
thiserror = "1.0.38"                             # error handling
tracing = "0.1.40"
